# Nasa-Transcript-Printer

./: .gitignore  LICENSE  README.md  pyproject.toml  recreate_pdf.py
config/: common.toml  default.toml
config/missions/: _template.toml  apollo11.toml
docs/: ARCHITECTURE.md  CLI.md
input/: AS11_TEC_merged.json
src/: cli.py  config.py  constants.py  io_utils.py  layout.py  renderer.py
src/nasa_transcript_printer/: __init__.py  __main__.py  cli.py  config.py  constants.py  io_utils.py  layout.py  renderer.py
